# cpp-doom

./: CMakeLists.txt  conanfile.txt  readme.md
core/: game_data.cpp  game_data.hpp
grfx/: icon.hpp  sdl_system.cpp
rndr/: visplane.cpp  visplane.hpp
stdx/: fold.hpp
